--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5751,13 +5751,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n"
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
+      "[CV] END bootstrap=False, max_depth=10, max_features=None, max_samples=0.5290418060840998, min_samples_leaf=8, min_samples_split=5, n_estimators=200; total time=   1.4s\n",
+      "[CV] END bootstrap=False, max_depth=10, max_features=None, max_samples=0.5290418060840998, min_samples_leaf=8, min_samples_split=5, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, max_depth=10, max_features=None, max_samples=0.5290418060840998, min_samples_leaf=8, min_samples_split=5, n_estimators=200; total time=   3.0s\n",
+      "[CV] END bootstrap=False, max_depth=10, max_features=None, max_samples=0.5290418060840998, min_samples_leaf=8, min_samples_split=5, n_estimators=200; total time=   3.7s\n",
+      "[CV] END bootstrap=False, max_depth=10, max_features=None, max_samples=0.5290418060840998, min_samples_leaf=8, min_samples_split=5, n_estimators=200; total time=   5.6s\n",
+      "[CV] END bootstrap=True, max_depth=20, max_features=sqrt, max_samples=0.5917173949330818, min_samples_leaf=8, min_samples_split=8, n_estimators=200; total time=29.9min\n",
+      "[CV] END bootstrap=True, max_depth=20, max_features=sqrt, max_samples=0.5917173949330818, min_samples_leaf=8, min_samples_split=8, n_estimators=200; total time=64.6min\n",
+      "[CV] END bootstrap=True, max_depth=20, max_features=sqrt, max_samples=0.5917173949330818, min_samples_leaf=8, min_samples_split=8, n_estimators=200; total time=96.0min\n",
+      "[CV] END bootstrap=True, max_depth=20, max_features=sqrt, max_samples=0.5917173949330818, min_samples_leaf=8, min_samples_split=8, n_estimators=200; total time=133.7min\n",
+      "[CV] END bootstrap=True, max_depth=20, max_features=sqrt, max_samples=0.5917173949330818, min_samples_leaf=8, min_samples_split=8, n_estimators=200; total time=170.3min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/python/lib/python3.13/site-packages/sklearn/model_selection/_validation.py:490: FitFailedWarning: \n",
+      "5 fits failed out of a total of 10.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/python/lib/python3.13/site-packages/sklearn/model_selection/_validation.py\", line 833, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "    ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/python/lib/python3.13/site-packages/sklearn/base.py\", line 1336, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "  File \"/opt/python/lib/python3.13/site-packages/sklearn/ensemble/_forest.py\", line 430, in fit\n",
+      "    raise ValueError(\n",
+      "    ...<3 lines>...\n",
+      "    )\n",
+      "ValueError: `max_sample` cannot be set if `bootstrap=False`. Either switch to `bootstrap=True` or set `max_sample=None`.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/opt/python/lib/python3.13/site-packages/sklearn/model_selection/_search.py:1137: UserWarning: One or more of the test scores are non-finite: [-49826.98802279             nan]\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "random_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce6a0c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('hello')"
    ]
   },
   {
