changement split date

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10546,7 +10546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 274,
    "id": "df1593b0",
    "metadata": {},
    "outputs": [],
@@ -10556,7 +10556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 275,
    "id": "4aa37f91",
    "metadata": {},
    "outputs": [],
@@ -10564,7 +10564,7 @@
     "X = df[all_features + [\"close_1d_ret_hedged_normalised\"]].replace([-np.inf, np.inf], np.nan).dropna()[all_features]\n",
     "y = df[all_features + [\"close_1d_ret_hedged_normalised\"]].replace([-np.inf, np.inf], np.nan).dropna()[\"close_1d_ret_hedged_normalised\"]\n",
     "\n",
-    "split_date = X.index.unique()[int(X.index.nunique()*0.8)]\n",
+    "split_date = X.index.unique().sort_values()[int(X.index.nunique()*0.8)]\n",
     "\n",
     "X_train = X.loc[X.index<split_date]\n",
     "X_test = X.loc[X.index>=split_date]\n",
@@ -10574,7 +10574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 276,
    "id": "e7c68a82",
    "metadata": {},
    "outputs": [],
@@ -10584,7 +10584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 277,
    "id": "60756448",
    "metadata": {},
    "outputs": [],
@@ -10612,7 +10612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 278,
    "id": "a006bcc0",
    "metadata": {},
    "outputs": [],
@@ -10633,7 +10633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 279,
    "id": "69628ed1",
    "metadata": {},
    "outputs": [],
@@ -10650,7 +10650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 280,
    "id": "48e63a74",
    "metadata": {},
    "outputs": [],
@@ -10661,7 +10661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 281,
    "id": "6e0b38b7",
    "metadata": {},
    "outputs": [],
@@ -10674,7 +10674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 282,
    "id": "09f6f668",
    "metadata": {},
    "outputs": [],
@@ -10687,7 +10687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 283,
    "id": "41d86d81",
    "metadata": {},
    "outputs": [],
@@ -10702,7 +10702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 284,
    "id": "d9d23bec",
    "metadata": {},
    "outputs": [],
@@ -10715,7 +10715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 285,
    "id": "19c7848c",
    "metadata": {},
    "outputs": [],
@@ -10725,7 +10725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 286,
    "id": "29fb3864",
    "metadata": {},
    "outputs": [
@@ -10735,7 +10735,7 @@
        "np.float64(0.5298648281774795)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10746,7 +10746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 287,
    "id": "6c4f0839",
    "metadata": {},
    "outputs": [
@@ -10756,7 +10756,7 @@
        "np.float64(0.4517745552732112)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10767,7 +10767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -10776,7 +10776,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -10797,7 +10797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -10806,7 +10806,7 @@
        "np.float64(0.46502043727821446)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
